<resources>
    <string name="app_name">TCC</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Não é cadastrado? Clique aqui</string>
    <string name="text_criar_conta">Crie sua conta</string>
    <string name="paciente">Paciente</string>
    <string name="procedimento">Procedimento</string>
    <string name="parametros">Parametros</string>
    <string name="ola">Olá!</string>
    <string name="relatorios">Relatorios</string>
    <string name="email">Email</string>
    <string name="buscar">Pesquisar</string>
    <string name="sair">Sair</string>
    <string name="alarme">Alarme</string>
    <string name="exames">Exames Adicionais</string>
    <string name="perfil">Alterar Dados</string>
    <string name="formulas">Formulas</string>
    <string name="gaso">Gasometria</string>
    <string name="hemo">Hemograma</string>
    <string name="hemogl">Hemoglobina</string>
    <string name="htc">Hematócrito</string>
    <string name="plaq">Plaquetas</string>
    <string name="tca">Tempo Crítico</string>
    <string name="SalvarContinuar">Salvar e Continuar</string>
    <string name="ph">pH</string>
    <string name="pco2">PCO2</string>
    <string name="po2">PO2</string>
    <string name="svo2">SvO2</string>
    <string name="hco3">Bicarbonato</string>
    <string name="beecf">Excesso de Base</string>
    <string name="k">Potássio</string>
    <string name="Na">Sódio</string>
    <string name="Ca">Cálcio</string>
    <string name="Cl">Cloro</string>
    <string name="Glic">Glicose</string>
    <string name="Lact">Lactato</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="cirurgiao">Cirurgião</string>
    <string name="auxiliar1">Auxiliar 1</string>
    <string name="auxiliar2">Auxliar 2</string>
    <string name="instrumentador">Instrumentador</string>
    <string name="perfusionista">Perfusionista</string>
    <string name="anestesista">Anestesista</string>
    <string name="circulante">Circulante</string>
    <string name="paracir">Parametros cirurgia</string>
    <string name="pia">Pia</string>
    <string name="temp">Temperatura</string>
    <string name="diu">Diurese</string>
    <string name="fc">FC</string>
    <string name="pvc">PVC</string>
    <string name="genero">Genero</string>
    <string name="iniciar">Iniciar CEC</string>
    <string name="salvarvoltar">Salvar e Voltar</string>
    <string name="paracec">Parametros CEC</string>
    <string name="equipes">Equipe</string>
    <string name="hosp">Hospital</string>
    <string name="reg">Registros</string>
    <string name="pos">Pós</string>
    <string name="addE">Adicionar Equipe</string>
    <string name="addP">Adicionar Paciente</string>
    <string name="iniciarP">Iniciar Procedimento</string>
    <string name="app">APP SEM NOME</string>
    <string name="id">Idade</string>
    <string name="diag">Diagnóstico</string>
    <string name="calcularInicio">Cálculo Inicial</string>
    <string name="calcularRep">Calcular Fluxo</string>
    <string name="peso">Peso</string>
    <string name="est">Estatura</string>
    <string name="pao2">PaO2</string>
    <string name="sao2">SaO2</string>
    <string name="pvo2">PvO2</string>
    <string name="pam">PAM</string>
    <string name="papm">PAPm</string>
    <string name="pcp">PCP</string>
    <string name="areaSupC">Área de Superfície Corpórea</string>
    <string name="vo2_36">VO2-36</string>
    <string name="vo2_35">VO2-35</string>
    <string name="vo2_34">VO2-34</string>
    <string name="vo2_33">VO2-33</string>
    <string name="vo2_32">VO2-32</string>
    <string name="vo2_escolhido"> <font color="#fe104d"> VO2 escolhido</font></string>
    <string name="cao2">CaO2</string>
    <string name="cvo2">CvO2</string>
    <string name="reo2">ReO2</string>
    <string name="dc">DC</string>
    <string name="ic">IC</string>
    <string name="vs">VS</string>
    <string name="irvs">IRVS</string>
    <string name="irvp">IRVP</string>
    <string name="obs">Observação</string>
    <string name="dataHora">Data e Hora</string>
    <string name="ida">Idade</string>
    <string name="supc">Superfície Corpórea</string>
    <string name="f1">Fluxo 1</string>
    <string name="f2">Fluxo 2</string>
    <string name="f3">Fluxo 3</string>
    <string name="rep">Repetir</string>
    <string name="fim">Finalizar</string>
    <string name="esqueci">Esqueci minha senha</string>
    <string name="alterar">Atualizar Senha</string>
    <string name="userName">Nome de usuário</string>
    <string name="tipo">Profissão</string>
    <string name="novaSenha">Nova Senha</string>
    <string name="atualizar">Atualizar Senha</string>
    <string name="datai">Data Início</string>
    <string name="dataf">Data Encerramento</string>
    <string name="horai">Hora Inicio</string>
    <string name="horaf">Hora Enceramento</string>
    <string name="hepMg">Heparina (mg)</string>
    <string name="hepMl">Heparina (mL Hora)</string>
    <string name="prot">Protamina</string>
    <string name="canulaAA">Cânula Arterial Aórtica nº</string>
    <string name="canulaV">Cânula Venosa</string>
    <string name="horaICEC">Início CEC</string>
    <string name="horaFCEC">Final CEC</string>
    <string name="totalCEC">Total CEC (minutos)</string>
    <string name="horaIClamp">Início Clamp</string>
    <string name="horaFClamp">Final Clamp</string>
    <string name="totalClamp">Total Clamp (minutos)</string>
    <string name="salvarFim">Salvar e Finalizar</string>
    <string name="horafProc">Hora Encerramento</string>
    <string name="datafProc">Data Encerramento</string>
    <string name="oxi">Oxigenador</string>
    <string name="atualizarCad">Alterar Dados</string>
    <string name="voltar">Voltar</string>
    <string name="registro">Registro:</string>
    <string name="examesrep">Exames-Repetição</string>
    <string name="ajusteCEC">Ajuste Fluxo</string>
    <string name="nome">Nome</string>
    <string name="examesRep">Exames Repetição</string>
    <string name="info">Informações Úteis</string>
    <string name="rela">Relatório</string>
    <string name="escolhido">VO2 escolhido</string>
    <string name="Info">Lista de Siglas</string>
    <string name="pesokg">Do paciente, em Kg</string>
    <string name="estcm">Do paciente, em cm</string>
    <string name="hb">Hb</string>
    <string name="pressaooxi">Pressão de Oxigênio</string>
    <string name="satarterail">Saturação Arterial de Oxigênio</string>
    <string name="pv">Pressão Venosa de Oxigênio</string>
    <string name="sv">Saturação Venosa de Oxigênio</string>
    <string name="pm">Pressão Arterial Média</string>
    <string name="pve">Pressão Venosa Central</string>
    <string name="pulmonar">Pressão Arterial Média na Artéria Pulmonar</string>
    <string name="capilar">Pressão Capilar Pulmonar </string>
    <string name="freq">Frequência Cardíaca</string>
    <string name="indice">Índice Cardíaco</string>
    <string name="volume">Volume Sistólico</string>
    <string name="relacao">Relação de Extração de Oxigênio</string>
    <string name="vol">Consumo de Oxigênio</string>
    <string name="vo2">VO2</string>
    <string name="resistencia">Índice de Resistência Vascular Sistêmica</string>
    <string name="vascular">Índice de Resistência Vascular Pulmonar</string>
    <string name="conteudo">Conteúdo Arterial de Oxigênio</string>
    <string name="conteudov">Conteúdo Venoso de Oxigênio</string>
    <string name="debito">Débito Cardíaco</string>
    <string name="asc">ASC</string>
    <string name="vo2_escolhidocor">VO2 escolhido</string>
    <string name="valor">Consumo de Oxigênio Escolhido Pelo Perfusionista</string>
    <string name="formula_ASC">ASC = √((peso × estatura) / 3600)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>