<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Senha">

    <TextView
        android:id="@+id/mudar_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterar"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/id_email"
        style="@style/Edit_Text"
        android:hint="@string/email"
        android:drawableEnd="@drawable/ic_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/mudar_senha"
        app:layout_constraintStart_toStartOf="@id/mudar_senha"
        app:layout_constraintEnd_toEndOf="@id/mudar_senha"
        android:layout_marginTop="16dp"
        />


    <EditText
        android:id="@+id/id_userName"
        style="@style/Edit_Text"
        android:hint="@string/userName"
        android:drawableEnd="@drawable/ic_user"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/id_email"
        app:layout_constraintStart_toStartOf="@id/id_email"
        app:layout_constraintEnd_toEndOf="@id/id_email"
        android:layout_marginTop="16dp"
        />

    <EditText
        android:id="@+id/id_tipo"
        style="@style/Edit_Text"
        android:hint="@string/tipo"
        android:drawableRight="@drawable/ic_profissao"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/id_userName"
        app:layout_constraintStart_toStartOf="@id/id_userName"
        app:layout_constraintEnd_toEndOf="@id/id_userName"
        android:layout_marginTop="16dp"
        />

    <EditText
        android:id="@+id/id_senha"
        style="@style/Edit_Text"
        android:hint="@string/novaSenha"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/id_tipo"
        app:layout_constraintStart_toStartOf="@id/id_tipo"
        app:layout_constraintEnd_toEndOf="@id/id_tipo"
        android:layout_marginTop="16dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_nova_senha"
        style="@style/Button"
        android:text="@string/atualizar"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/id_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>